--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -12,3 +12,8 @@ ktor {
         modules = [ vn.patrick.plugins.ApplicationKt.module ]
     }
 }
+
+storage {
+    driverClassName = "org.postgresql.Driver"
+    jdbcURL = "jdbc:postgresql://db:5432/ktorjournal?user=postgres"
+}
