--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -15,5 +15,5 @@ ktor {
 
 storage {
     driverClassName = "org.postgresql.Driver"
-    jdbcURL = "jdbc:postgresql://dpg-cgekp9g2qv2dpv9au480-a:5432/postgres_tl6e?user=postgres_tl6e_user"
+    jdbcURL = "jdbc:postgresql://dpg-cgekp9g2qv2dpv9au480-a:5432/postgres_tl6e?user=postgres_tl6e_user&password=K7ou5AEneJ4XeB6nU8UegkfmXjle0tEl"
 }
