--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,6 +4,7 @@ jwt {
     audience = "http://0.0.0.0:8080/hello"
     realm = "Access to 'hello'"
 }
+
 ktor {
     deployment {
         port = 8080
@@ -15,5 +16,5 @@ ktor {
 
 storage {
     driverClassName = "org.postgresql.Driver"
-    jdbcURL = "jdbc:postgresql://dpg-cgekp9g2qv2dpv9au480-a:5432/postgres_tl6e?user=postgres_tl6e_user&password=K7ou5AEneJ4XeB6nU8UegkfmXjle0tEl"
+    jdbcURL = "jdbc:postgresql://db:5432/ktorjournal?user=postgres"
 }
