Fix bug socket, and show result

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -16,5 +16,5 @@ ktor {
 
 storage {
     driverClassName = "org.postgresql.Driver"
-    jdbcURL = "jdbc:postgresql://dpg-cglppgg7oslael4s7ef0-a:5432/ktor_database?user=ktor_database_user&password=kvQBoVDQNsuU59jRkPSy29XnO4rAksDw"
+    jdbcURL = "jdbc:postgresql://db:5432/ktorjournal?user=postgres"
 }
