Update socket room

--- a/.gitignore
+++ b/.gitignore
@@ -1325,3 +1325,8 @@ out/
 /tmp/db/base/16384/24592
 /tmp/db/base/16384/24593
 /tmp/db/base/16384/24594
+/tmp/db/base/16384/32783
+/tmp/db/base/16384/32784
+/tmp/db/base/16384/32788
+/tmp/db/base/16384/32789
+/tmp/db/base/16384/32790
