--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -16,5 +16,5 @@ ktor {
 
 storage {
     driverClassName = "org.postgresql.Driver"
-    jdbcURL = "jdbc:postgresql://dpg-ch335ntgk4qarqjis0n0-a:5432/ktor_database_h7hz?user=ktor_database_h7hz_user&password=JlsWIQPDG0ZOOabreOetMme5wRu9dUUl"
+    jdbcURL = "jdbc:postgresql://dpg-ciuuqiliuiedpv4c56gg-a:5432/ktor_database_ozq1?user=ktor_database_ozq1_user&password=ic3Jd3zvdUR8DTZGNSedg4T2AvEc7FDu"
 }
