Update new database

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -16,5 +16,6 @@ ktor {
 
 storage {
     driverClassName = "org.postgresql.Driver"
-    jdbcURL = "jdbc:postgresql://dpg-ciuuqiliuiedpv4c56gg-a:5432/ktor_database_ozq1?user=ktor_database_ozq1_user&password=ic3Jd3zvdUR8DTZGNSedg4T2AvEc7FDu"
+    jdbcURL = "jdbc:postgresql://database-quizz.cko3ekzzfbrv.ap-southeast-1.rds.amazonaws.com:5432/database-quizz
+    ?user=postgres&password=31121995"
 }
